[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo_cypher"
version = "0.1.0"
description = "Cypher cell plugin for Marimo"
readme = "README.md"
authors = [
    { name = "Marimo Team", email = "hello@marimo.io" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.1.0",
    "neo4j>=5.0.0",
    "neo4j-viz>=0.1.0"
]

[project.entry-points."marimo.cell_plugins"]
cypher = "marimo_cypher.plugin:cypher_plugin"

[tool.hatch.build.targets.wheel]
packages = ["marimo_cypher"]
